Added DB schema, finished all implementations
